--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
     </ul>
   </section>
 
+  <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/Iowa-Carbon-Pipelines/"><img src="images\carbon.png" alt="This map helps users locate Iowa counties impacted by planned carbon pipeline construction, ordinances, litigation, and news." class="project-image" /></a>
+    <h3>Iowa Carbon Pipelines: Ordinances, Litigation, and News</h3>
+    <p>This map helps users locate Iowa counties impacted by planned carbon pipeline construction, ordinances, litigation, and news. Research for this project was conducting by staff and research assistants of the Hubbell Environmental Law Initiative at the University of Iowa College of law. This application was developed by the University of Iowa Libraries' Digital Scholarship & Publishing Studio. The locations of the planned pipelines were digitized by researchers at the FracTracker Alliance and appear here courtesy of Dr. Ted Auch, the Midwest Program Director of the FracTracker Alliance.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/Iowa-Carbon-Pipelines/">Iowa Carbon Pipelines</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/Iowa-Carbon-Pipelines/tree/main/data">Map Data</a></li>
+    </ul>
+  </section>
+
 </body>
 
 </html>
