Add atlas of early printing and iwp map

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <p>This web map application maps 763 unique restrictive covenants or agreements (totaling 29,947 residential parcels) enacted in the City of St. Louis and 1,041 unique restrictive covenants or agreements (totalling 75,539 parcels) enacted in St. Louis County between 1870 and 1952.</p>
     <ul>
       <li>See the map: <a target='_blank' href="https://jebowe3.github.io/greater_stl_covs/">Racial Restrictions in Greater St. Louis: 1870-1952</a></li>
-      <li><a target='_blank' href="https://github.com/jebowe3/greater_stl_covs/tree/main/data">Access the data</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/greater_stl_covs/tree/main/data">Access the data</a></li>
     </ul>
   </section>
 
@@ -108,7 +108,7 @@
     <p>A web map application showing events in the history of the University of Iowa between 1958 and 1975.</p>
     <ul>
       <li>See the map: <a target='_blank' href="https://jebowe3.github.io/sixties_map/">Uptight & Laid-Back: Iowa City in the 1960s</a></li>
-      <li><a target='_blank' href="https://github.com/jebowe3/sixties_map/tree/main/data">Access the data</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/sixties_map/tree/main/data">Access the data</a></li>
     </ul>
   </section>
 
@@ -118,7 +118,27 @@
     <p>This map helps users locate Iowa counties impacted by planned carbon pipeline construction, ordinances, litigation, and news. Research for this project was conducting by staff and research assistants of the Hubbell Environmental Law Initiative at the University of Iowa College of law. This application was developed by the University of Iowa Libraries' Digital Scholarship & Publishing Studio. The locations of the planned pipelines were digitized by researchers at the FracTracker Alliance and appear here courtesy of Dr. Ted Auch, the Midwest Program Director of the FracTracker Alliance.</p>
     <ul>
       <li>See the map: <a target='_blank' href="https://jebowe3.github.io/Iowa-Carbon-Pipelines/">Iowa Carbon Pipelines</a></li>
-      <li><a target='_blank' href="https://github.com/jebowe3/Iowa-Carbon-Pipelines/tree/main/data">Access the data</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/Iowa-Carbon-Pipelines/tree/main/data">Access the data</a></li>
+    </ul>
+  </section>
+
+  <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/atlas-of-early-printing/"><img src="images\printing.PNG" alt="This is a map application showing major advances in printing alongside religious, political, economic, and cultural developments in the late 15th century." class="project-image" /></a>
+    <h3>Atlas of Early Printing</h3>
+    <p>This is a map application showing major advances in printing alongside religious, political, economic, and cultural developments in the late 15th century.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/atlas-of-early-printing/">Atlas of Early Printing</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/atlas-of-early-printing/tree/main/data">Access the data</a></li>
+    </ul>
+  </section>
+
+  <section class="project"> 
+    <a target='_blank' href="https://jebowe3.github.io/IWP-map/"><img src="images\iwp.PNG" alt="A searchable and filterable database of over 1,500 University of Iowa International Writing Program participants since 1967." class="project-image" /></a>
+    <h3>International Writing Program Participants</h3>
+    <p>A searchable and filterable database of over 1,500 University of Iowa International Writing Program participants since 1967.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/IWP-map/">International Writing Program Participants</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/IWP-map/tree/main/data">Access the data</a></li>
     </ul>
   </section>
 
