Add green books map

--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
     </ul>
   </section>
 
+  <section class="project">
+    <a target='_blank' href="https://dsps.lib.uiowa.edu/hicrn/map/"><img src="images\greenbooks.PNG" alt="An interactive map of business entries for Iowa appearing in Green Book publications between 1939 and 1966." class="project-image" /></a>
+    <h3>Tour Mid-Twentieth Century Iowa Green Books</h3>
+    <p>Victor Hugo Green, a New York postal employee, founded the Negro Motorist Green Book in 1936 and published it annually for 30 years. The publication was an indispensable tool for Black motorists in the U.S., who navigated through a segregated nation during the Jim Crow era. The guide included information about restaurants, lodging, and other services considered hospitable to Black travelers. Establishments in Iowa were among those listed in the Green Book, identified in the linked interactive map.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://dsps.lib.uiowa.edu/hicrn/map/">Tour Mid-Twentieth Century Iowa</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/ui-libraries/green_books_iowa_map/tree/main/data">Access the data</a></li>
+    </ul>
+  </section> 
+
 </body>
 
 </html>
