--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>My Map Gallery</title>
 
-  <meta name=‘viewport’ content=‘initial-scale=1,maximum-scale=1,user-scalable=no’ />
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
   <link href='https://fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@
     }
 
     h1 {
-      font-family: Dosis, sans-serif;
+      font-family: Arial, sans-serif;
       color: #375671;
       width: 80%;
       margin: 0 auto;
@@ -32,7 +32,7 @@
     }
 
     h2 {
-      font-family: Dosis, sans-serif;
+      font-family: Arial, sans-serif;
       color: #375671;
       width: 80%;
       margin: 0 auto;
@@ -40,7 +40,7 @@
     }
 
     h3 {
-      font-family: Dosis, sans-serif;
+      font-family: Arial, sans-serif;
       color: #003d71
     }
 
