--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
   </section>
 
   <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/lewiston-1950-3d/"><img src="images\mt-washington.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to a 1950 topographic map of Northern New Hampshire and Southwestern Maine." class="project-image" /></a>
+    <h3>The Presidential Range in 3D, 1950</h3>
+    <p>This web map application leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to a 1950 topographic map of Northern New Hampshire and Southwestern Maine.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/lewiston-1950-3d/">The Presidential Range in 3D, 1950</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/lewiston-1950-3d/tree/main/data">Access the data</a></li>
+    </ul>
+  </section>  
+
+  <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/sixties_map/"><img src="images\sixties.PNG" alt="A web map application showing events in the history of the University of Iowa between 1958 and 1975." class="project-image" /></a>
     <h3>Uptight & Laid-Back: Iowa City in the 1960s</h3>
     <p>A web map application showing events in the history of the University of Iowa between 1958 and 1975.</p>
