--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
   </section>
 
   <section class="project">
-    <a target='_blank' href="https://jebowe3.github.io/lewiston-1950-3d/"><img src="images\mt-washington.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to a 1950 topographic map of Northern New Hampshire and Southwestern Maine." class="project-image" /></a>
-    <h3>The Presidential Range in 3D, 1950</h3>
-    <p>This web map application leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to a 1950 topographic map of Northern New Hampshire and Southwestern Maine.</p>
+    <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/"><img src="images\high-peaks.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY." class="project-image" /></a>
+    <h3>The Adirondack High Peaks in 3D, 1899</h3>
+    <p>This web map application leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY. Hillshading was done in Blender and coding performed primarily with MapLibre GL JS. All techniques used are free and open-source.</p>
     <ul>
-      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/lewiston-1950-3d/">The Presidential Range in 3D, 1950</a></li>
-      <li>Data: <a target='_blank' href="https://github.com/jebowe3/lewiston-1950-3d/tree/main/data">Access the data</a></li>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/">The Adirondack High Peaks in 3D, 1899</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/adirondack-high-peaks-1899/tree/main/pmtiles">Access the data</a></li>
     </ul>
   </section>  
 
