--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
   </header>
 
   <section class="project">
+    <a target='_blank' href="https://ui-libraries.github.io/genetic-privacy-map/"><img src="images\dna-privacy.png" alt="A web map application showing the current state-by-state legal landscape of genetic privacy laws across the United States." class="project-image" /></a>
+    <h3>Genetic Privacy Laws in the USA (In Progress)</h3>
+    <p>This map is a collaboration with the University of Iowa College of Law to map the current state-by-state legal landscape of genetic privacy laws across the United States.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://ui-libraries.github.io/genetic-privacy-map/">Genetic Privacy Laws in the USA (In Progress)</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/ui-libraries/genetic-privacy-map/tree/main/data">Access the data</a></li>
+    </ul>
+  </section>   
+
+  <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/greater_stl_covs/"><img src="images\stl_covs.PNG" alt="A web map application showing the historical implementation of racial restrictive property covenants in Greater St. Louis between 1870 and 1952." class="project-image" /></a>
     <h3>Racial Restrictions in Greater St. Louis: 1870-1952</h3>
     <p>This web map application maps 763 unique restrictive covenants or agreements (totaling 29,947 residential parcels) enacted in the City of St. Louis and 1,041 unique restrictive covenants or agreements (totalling 75,539 parcels) enacted in St. Louis County between 1870 and 1952.</p>
@@ -101,6 +111,26 @@
       <li>Data: <a target='_blank' href="https://github.com/jebowe3/greater_stl_covs/tree/main/data">Access the data</a></li>
     </ul>
   </section>
+
+  <section class="project">
+    <a target='_blank' href="https://ui-libraries.github.io/Iowa-Carbon-Pipelines/"><img src="images\carbon.png" alt="This map helps users locate Iowa counties impacted by planned carbon pipeline construction, ordinances, litigation, and news." class="project-image" /></a>
+    <h3>Iowa Carbon Pipelines: Ordinances, Litigation, and News</h3>
+    <p>This map helps users locate Iowa counties impacted by planned carbon pipeline construction, ordinances, litigation, and news. Research for this project was conducting by staff and research assistants of the Hubbell Environmental Law Initiative at the University of Iowa College of law. This application was developed by the University of Iowa Libraries' Digital Scholarship & Publishing Studio. The locations of the planned pipelines were digitized by researchers at the FracTracker Alliance and appear here courtesy of Dr. Ted Auch, the Midwest Program Director of the FracTracker Alliance.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://ui-libraries.github.io/Iowa-Carbon-Pipelines/">Iowa Carbon Pipelines</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/ui-libraries/Iowa-Carbon-Pipelines/tree/main/data">Access the data</a></li>
+    </ul>
+  </section> 
+  
+  <section class="project">
+    <a target='_blank' href="https://ui-libraries.github.io/women-scientists-pre-war-tokyo/index.html"><img src="images\tokyo-sci.png" alt="A web map application to show the presence and contributions of women scientists in Pre-War Tokyo." class="project-image" /></a>
+    <h3>Women Scientists in Pre-War Tokyo</h3>
+    <p>This project is an attempt to undo the erasure of women scientists and affirm their contributions to science in early twentieth-century Japan. Although the government was not active in promoting women/'s higher education and training women scientists, ambitious women and their supporters created spaces where women could engage in scientific inquiry. By mapping these sites and naming the women scientists associated with them, this project demonstrates that women were part of the development of modern science in Japan.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://ui-libraries.github.io/women-scientists-pre-war-tokyo/index.html">Women Scientists in Pre-War Tokyo</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/ui-libraries/women-scientists-pre-war-tokyo/tree/main/json">Access the data</a></li>
+    </ul>
+  </section>    
 
   <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/"><img src="images\high-peaks.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY." class="project-image" /></a>
@@ -119,16 +149,6 @@
     <ul>
       <li>See the map: <a target='_blank' href="https://jebowe3.github.io/sixties_map/">Uptight & Laid-Back: Iowa City in the 1960s</a></li>
       <li>Data: <a target='_blank' href="https://github.com/jebowe3/sixties_map/tree/main/data">Access the data</a></li>
-    </ul>
-  </section>
-
-  <section class="project">
-    <a target='_blank' href="https://jebowe3.github.io/Iowa-Carbon-Pipelines/"><img src="images\carbon.png" alt="This map helps users locate Iowa counties impacted by planned carbon pipeline construction, ordinances, litigation, and news." class="project-image" /></a>
-    <h3>Iowa Carbon Pipelines: Ordinances, Litigation, and News</h3>
-    <p>This map helps users locate Iowa counties impacted by planned carbon pipeline construction, ordinances, litigation, and news. Research for this project was conducting by staff and research assistants of the Hubbell Environmental Law Initiative at the University of Iowa College of law. This application was developed by the University of Iowa Libraries' Digital Scholarship & Publishing Studio. The locations of the planned pipelines were digitized by researchers at the FracTracker Alliance and appear here courtesy of Dr. Ted Auch, the Midwest Program Director of the FracTracker Alliance.</p>
-    <ul>
-      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/Iowa-Carbon-Pipelines/">Iowa Carbon Pipelines</a></li>
-      <li>Data: <a target='_blank' href="https://github.com/jebowe3/Iowa-Carbon-Pipelines/tree/main/data">Access the data</a></li>
     </ul>
   </section>
 
