--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/greater_stl_covs/"><img src="images\stl_covs.PNG" alt="A web map application showing the historical implementation of racial restrictive property covenants in Greater St. Louis between 1870 and 1952." class="project-image" /></a>
     <h3>Racial Restrictions in Greater St. Louis: 1870-1952</h3>
-    <p>This web map application maps 763 unique restrictive covenants or agreements (totaling 29,947 residential parcels) enacted in the City of St. Louis and 1,041 unique restrictive covenants or agreements (totalling 75,539 parcels) enacted in St. Louis County between 1870 and 1952.</p>
+    <p>This web map application maps 763 unique restrictive covenants or agreements (totaling 29,947 residential parcels) enacted in the City of St. Louis and 1,041 unique restrictive covenants or agreements (totalling 75,539 parcels) enacted in St. Louis County between 1870 and 1952. This was a collaboration with Colin Gordon, PhD.</p>
     <ul>
       <li>See the map: <a target='_blank' href="https://jebowe3.github.io/greater_stl_covs/">Racial Restrictions in Greater St. Louis: 1870-1952</a></li>
       <li>Data: <a target='_blank' href="https://github.com/jebowe3/greater_stl_covs/tree/main/data">Access the data</a></li>
@@ -125,12 +125,22 @@
   <section class="project">
     <a target='_blank' href="https://ui-libraries.github.io/women-scientists-pre-war-tokyo/index.html"><img src="images\tokyo-sci.png" alt="A web map application to show the presence and contributions of women scientists in Pre-War Tokyo." class="project-image" /></a>
     <h3>Women Scientists in Pre-War Tokyo</h3>
-    <p>This project is an attempt to undo the erasure of women scientists and affirm their contributions to science in early twentieth-century Japan. Although the government was not active in promoting women/'s higher education and training women scientists, ambitious women and their supporters created spaces where women could engage in scientific inquiry. By mapping these sites and naming the women scientists associated with them, this project demonstrates that women were part of the development of modern science in Japan.</p>
+    <p>This project is an attempt to undo the erasure of women scientists and affirm their contributions to science in early twentieth-century Japan. Although the government was not active in promoting women/'s higher education and training women scientists, ambitious women and their supporters created spaces where women could engage in scientific inquiry. By mapping these sites and naming the women scientists associated with them, this project demonstrates that women were part of the development of modern science in Japan. This was a collaboration with Lisa Nakahara.</p>
     <ul>
       <li>See the map: <a target='_blank' href="https://ui-libraries.github.io/women-scientists-pre-war-tokyo/index.html">Women Scientists in Pre-War Tokyo</a></li>
       <li>Data: <a target='_blank' href="https://github.com/ui-libraries/women-scientists-pre-war-tokyo/tree/main/json">Access the data</a></li>
     </ul>
-  </section>    
+  </section>
+  
+  <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/auto_update_with_slider/"><img src="images\covid-update.png" alt="A web map application that parses data from a continually updated data table available on the web at: https://github.com/owid/covid-19-data and joins it to matching countries on a global map to visualize the percentage of fully vaccinated people in each country." class="project-image" /></a>
+    <h3>Example of a Self-Updating Map of Global COVID-19 Vaccination Prevalence</h3>
+    <p>An example provided to a colleague to assist with an open-source story map project about global COVID-19 vaccination policy and application. This map parses data from a continually updated data table available on the web at: https://github.com/owid/covid-19-data and joins it to matching countries on a global map to visualize the percentage of fully vaccinated people in each country. Kenny Stancil's story map won <a target='_blank' href="https://geography.as.uky.edu/national-cartography-award-goes-digital-mapping-student">first prize at the 2022 North American Cartographic Information Society (NACIS) conference's student Dynamic Map competition</a>.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/auto_update_with_slider/">Example of a Self-Updating Map of Global COVID-19 Vaccination Prevalence</a></li>
+      <li>Data: <a target='_blank' href="https://raw.githubusercontent.com/owid/covid-19-data/master/public/data/vaccinations/vaccinations.csv">Access the data</a></li>
+    </ul>
+  </section>   
 
   <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/"><img src="images\high-peaks.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY." class="project-image" /></a>
@@ -140,7 +150,7 @@
       <li>See the map: <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/">The Adirondack High Peaks in 3D, 1899</a></li>
       <li>Data: <a target='_blank' href="https://github.com/jebowe3/adirondack-high-peaks-1899/tree/main/pmtiles">Access the data</a></li>
     </ul>
-  </section>  
+  </section>
 
   <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/sixties_map/"><img src="images\sixties.PNG" alt="A web map application showing events in the history of the University of Iowa between 1958 and 1975." class="project-image" /></a>
@@ -175,7 +185,7 @@
   <section class="project">
     <a target='_blank' href="https://dsps.lib.uiowa.edu/hicrn/map/"><img src="images\greenbooks.PNG" alt="An interactive map of business entries for Iowa appearing in Green Book publications between 1939 and 1966." class="project-image" /></a>
     <h3>Tour Mid-Twentieth Century Iowa Green Books</h3>
-    <p>Victor Hugo Green, a New York postal employee, founded the Negro Motorist Green Book in 1936 and published it annually for 30 years. The publication was an indispensable tool for Black motorists in the U.S., who navigated through a segregated nation during the Jim Crow era. The guide included information about restaurants, lodging, and other services considered hospitable to Black travelers. Establishments in Iowa were among those listed in the Green Book, identified in the linked interactive map.</p>
+    <p>Victor Hugo Green, a New York postal employee, founded the Negro Motorist Green Book in 1936 and published it annually for 30 years. The publication was an indispensable tool for Black motorists in the U.S., who navigated through a segregated nation during the Jim Crow era. The guide included information about restaurants, lodging, and other services considered hospitable to Black travelers. Establishments in Iowa were among those listed in the Green Book, identified in the linked interactive map. This was a collaboration with David McCartney.</p>
     <ul>
       <li>See the map: <a target='_blank' href="https://dsps.lib.uiowa.edu/hicrn/map/">Tour Mid-Twentieth Century Iowa</a></li>
       <li>Data: <a target='_blank' href="https://github.com/ui-libraries/green_books_iowa_map/tree/main/data">Access the data</a></li>
