--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
       <li>Data: <a target='_blank' href="https://github.com/ui-libraries/women-scientists-pre-war-tokyo/tree/main/json">Access the data</a></li>
     </ul>
   </section>
+
+  <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html"><img src="images\iowa-511.png" alt="This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, updated every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications." class="project-image" /></a>
+    <h3>Iowa Travel Advisories</h3>
+    <p>This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, which is revised every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html">Iowa Travel Advisories</a></li>
+      <li>Data: <a target='_blank' href="https://services.arcgis.com/8lRhdTsQyJpO52F1/arcgis/rest/services/CARS511_Iowa_View/FeatureServer/0">Access the data</a></li>
+    </ul>
+  </section>   
   
   <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/auto_update_with_slider/"><img src="images\covid-update.png" alt="A web map application that parses data from a continually updated data table available on the web at: https://github.com/owid/covid-19-data and joins it to matching countries on a global map to visualize the percentage of fully vaccinated people in each country." class="project-image" /></a>
