--- a/index.html
+++ b/index.html
@@ -92,6 +92,52 @@
     <h2>Digital Scholarship & Publishing Studio, University of Iowa</h2>
   </header>
 
+  <h3 style="width: 80%; margin: 30px auto; font-size: 1.5em">Independent Work</h3>
+
+  <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/"><img src="images\high-peaks.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY." class="project-image" /></a>
+    <h3>The Adirondack High Peaks in 3D, 1899</h3>
+    <p>This web map application leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY. Hillshading was done in Blender and coding performed primarily with MapLibre GL JS. All techniques used are free and open-source.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/">The Adirondack High Peaks in 3D, 1899</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/jebowe3/adirondack-high-peaks-1899/tree/main/pmtiles">Access the data</a></li>
+    </ul>
+  </section>  
+
+  <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html"><img src="images\iowa-511.png" alt="This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, updated every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications." class="project-image" /></a>
+    <h3>Iowa Travel Advisories</h3>
+    <p>This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, which is revised every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html">Iowa Travel Advisories</a></li>
+      <li>Data: <a target='_blank' href="https://services.arcgis.com/8lRhdTsQyJpO52F1/arcgis/rest/services/CARS511_Iowa_View/FeatureServer/0">Access the data</a></li>
+    </ul>
+  </section>   
+
+  <h3 style="width: 80%; margin: 30px auto; font-size: 1.5em">Collaborations with Students & Friends</h3>
+
+  <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/auto_update_with_slider/"><img src="images\covid-update.png" alt="A web map application that parses data from a continually updated data table available on the web at: https://github.com/owid/covid-19-data and joins it to matching countries on a global map to visualize the percentage of fully vaccinated people in each country." class="project-image" /></a>
+    <h3>Example of a Self-Updating Map of Global COVID-19 Vaccination Prevalence</h3>
+    <p>An example provided to a colleague to assist with an open-source story map project about global COVID-19 vaccination policy and application. This map parses data from a continually updated data table available on the web at: https://github.com/owid/covid-19-data and joins it to matching countries on a global map to visualize the percentage of fully vaccinated people in each country. Kenny Stancil's story map won <a target='_blank' href="https://geography.as.uky.edu/national-cartography-award-goes-digital-mapping-student">first prize at the 2022 North American Cartographic Information Society (NACIS) conference's student Dynamic Map competition</a>.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/auto_update_with_slider/">Example of a Self-Updating Map of Global COVID-19 Vaccination Prevalence</a></li>
+      <li>Data: <a target='_blank' href="https://raw.githubusercontent.com/owid/covid-19-data/master/public/data/vaccinations/vaccinations.csv">Access the data</a></li>
+    </ul>
+  </section>   
+  
+  <section class="project">
+    <a target='_blank' href="https://ui-libraries.github.io/women-scientists-pre-war-tokyo/index.html"><img src="images\tokyo-sci.png" alt="A web map application to show the presence and contributions of women scientists in Pre-War Tokyo." class="project-image" /></a>
+    <h3>Women Scientists in Pre-War Tokyo</h3>
+    <p>This project is an attempt to undo the erasure of women scientists and affirm their contributions to science in early twentieth-century Japan. Although the government was not active in promoting women/'s higher education and training women scientists, ambitious women and their supporters created spaces where women could engage in scientific inquiry. By mapping these sites and naming the women scientists associated with them, this project demonstrates that women were part of the development of modern science in Japan. This was a collaboration with Lisa Nakahara.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://ui-libraries.github.io/women-scientists-pre-war-tokyo/index.html">Women Scientists in Pre-War Tokyo</a></li>
+      <li>Data: <a target='_blank' href="https://github.com/ui-libraries/women-scientists-pre-war-tokyo/tree/main/json">Access the data</a></li>
+    </ul>
+  </section>
+
+  <h3 style="width: 80%; margin: 30px auto; font-size: 1.5em">Collaborations with Faculty & Staff</h3>
+
   <section class="project">
     <a target='_blank' href="https://ui-libraries.github.io/genetic-privacy-map/"><img src="images\dna-privacy.png" alt="A web map application showing the current state-by-state legal landscape of genetic privacy laws across the United States." class="project-image" /></a>
     <h3>Genetic Privacy Laws in the USA (In Progress)</h3>
@@ -121,46 +167,6 @@
       <li>Data: <a target='_blank' href="https://github.com/ui-libraries/Iowa-Carbon-Pipelines/tree/main/data">Access the data</a></li>
     </ul>
   </section> 
-  
-  <section class="project">
-    <a target='_blank' href="https://ui-libraries.github.io/women-scientists-pre-war-tokyo/index.html"><img src="images\tokyo-sci.png" alt="A web map application to show the presence and contributions of women scientists in Pre-War Tokyo." class="project-image" /></a>
-    <h3>Women Scientists in Pre-War Tokyo</h3>
-    <p>This project is an attempt to undo the erasure of women scientists and affirm their contributions to science in early twentieth-century Japan. Although the government was not active in promoting women/'s higher education and training women scientists, ambitious women and their supporters created spaces where women could engage in scientific inquiry. By mapping these sites and naming the women scientists associated with them, this project demonstrates that women were part of the development of modern science in Japan. This was a collaboration with Lisa Nakahara.</p>
-    <ul>
-      <li>See the map: <a target='_blank' href="https://ui-libraries.github.io/women-scientists-pre-war-tokyo/index.html">Women Scientists in Pre-War Tokyo</a></li>
-      <li>Data: <a target='_blank' href="https://github.com/ui-libraries/women-scientists-pre-war-tokyo/tree/main/json">Access the data</a></li>
-    </ul>
-  </section>
-
-  <section class="project">
-    <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html"><img src="images\iowa-511.png" alt="This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, updated every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications." class="project-image" /></a>
-    <h3>Iowa Travel Advisories</h3>
-    <p>This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, which is revised every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications.</p>
-    <ul>
-      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html">Iowa Travel Advisories</a></li>
-      <li>Data: <a target='_blank' href="https://services.arcgis.com/8lRhdTsQyJpO52F1/arcgis/rest/services/CARS511_Iowa_View/FeatureServer/0">Access the data</a></li>
-    </ul>
-  </section>   
-  
-  <section class="project">
-    <a target='_blank' href="https://jebowe3.github.io/auto_update_with_slider/"><img src="images\covid-update.png" alt="A web map application that parses data from a continually updated data table available on the web at: https://github.com/owid/covid-19-data and joins it to matching countries on a global map to visualize the percentage of fully vaccinated people in each country." class="project-image" /></a>
-    <h3>Example of a Self-Updating Map of Global COVID-19 Vaccination Prevalence</h3>
-    <p>An example provided to a colleague to assist with an open-source story map project about global COVID-19 vaccination policy and application. This map parses data from a continually updated data table available on the web at: https://github.com/owid/covid-19-data and joins it to matching countries on a global map to visualize the percentage of fully vaccinated people in each country. Kenny Stancil's story map won <a target='_blank' href="https://geography.as.uky.edu/national-cartography-award-goes-digital-mapping-student">first prize at the 2022 North American Cartographic Information Society (NACIS) conference's student Dynamic Map competition</a>.</p>
-    <ul>
-      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/auto_update_with_slider/">Example of a Self-Updating Map of Global COVID-19 Vaccination Prevalence</a></li>
-      <li>Data: <a target='_blank' href="https://raw.githubusercontent.com/owid/covid-19-data/master/public/data/vaccinations/vaccinations.csv">Access the data</a></li>
-    </ul>
-  </section>   
-
-  <section class="project">
-    <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/"><img src="images\high-peaks.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY." class="project-image" /></a>
-    <h3>The Adirondack High Peaks in 3D, 1899</h3>
-    <p>This web map application leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY. Hillshading was done in Blender and coding performed primarily with MapLibre GL JS. All techniques used are free and open-source.</p>
-    <ul>
-      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/">The Adirondack High Peaks in 3D, 1899</a></li>
-      <li>Data: <a target='_blank' href="https://github.com/jebowe3/adirondack-high-peaks-1899/tree/main/pmtiles">Access the data</a></li>
-    </ul>
-  </section>
 
   <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/sixties_map/"><img src="images\sixties.PNG" alt="A web map application showing events in the history of the University of Iowa between 1958 and 1975." class="project-image" /></a>
@@ -171,7 +177,7 @@
       <li>Data: <a target='_blank' href="https://github.com/jebowe3/sixties_map/tree/main/data">Access the data</a></li>
     </ul>
   </section>
-
+  
   <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/atlas-of-early-printing/"><img src="images\printing.PNG" alt="This is a map application showing major advances in printing alongside religious, political, economic, and cultural developments in the late 15th century." class="project-image" /></a>
     <h3>Atlas of Early Printing</h3>
