--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
   <h3 style="width: 80%; margin: 30px auto; font-size: 1.5em">Independent Work</h3>
 
   <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/SIPRI-transfers/"><img src="images\sipri.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY." class="project-image" /></a>
+    <h3>US Global Weapons Transfers</h3>
+    <p>A map made from data downloaded from the Stockholm International Peace Research Institute's (SIPRI) Arms Transfers Database of Trend Indicator Values (TIV). These values are based on the known unit production costs of a core set of weapons and are intended
+      to allow for a common measurement of arms flow trends between nations over time. This map plots trends in arms transfers from the US to other nations between 1950 and 2023.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/SIPRI-transfers/">US Global Weapons Transfers</a></li>
+      <li>Data: <a target='_blank' href="https://www.sipri.org/databases/armstransfers">Access the data</a></li>
+    </ul>
+  </section>  
+
+  <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/adirondack-high-peaks-1899/"><img src="images\high-peaks.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY." class="project-image" /></a>
     <h3>The Adirondack High Peaks in 3D, 1899</h3>
     <p>This web map application leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY. Hillshading was done in Blender and coding performed primarily with MapLibre GL JS. All techniques used are free and open-source.</p>
