add esri examples

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
       color: #003d71
     }
 
+    h4 {
+      font-family: Arial, sans-serif;
+      color: #003d71
+    }
+
     p {
       font-size: .9em;
       color: #375671;
@@ -123,7 +128,31 @@
       <li>See the map: <a target='_blank' href="https://jebowe3.github.io/using-web-services/Iowa-511/index.html">Iowa Travel Advisories</a></li>
       <li>Data: <a target='_blank' href="https://services.arcgis.com/8lRhdTsQyJpO52F1/arcgis/rest/services/CARS511_Iowa_View/FeatureServer/0">Access the data</a></li>
     </ul>
-  </section>   
+  </section>
+  
+  <h4 style="width: 80%; margin: 30px auto; font-size: 1.25em">ArcGIS Dashboards</h3>
+
+  <section class="project">
+    <a target='_blank' href="https://www.arcgis.com/apps/dashboards/1ac554bd4e644eb4aef1234e203b6539"><img src="images\dashboard.png" alt="This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, updated every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications." class="project-image" /></a>
+    <h3>Iowa Travel Alerts</h3>
+    <p>A slightly different approach using ArcGIS Dashboards to furnish live data from the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, which is revised every 10 minutes. This map shows how web map developers can enroll live data in applications build in ArcGIS Dashboards.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://www.arcgis.com/apps/dashboards/1ac554bd4e644eb4aef1234e203b6539">Iowa Travel Alerts</a></li>
+      <li>Data: <a target='_blank' href="https://services.arcgis.com/8lRhdTsQyJpO52F1/arcgis/rest/services/CARS511_Iowa_View/FeatureServer/0">Access the data</a></li>
+    </ul>
+  </section>      
+  
+  <h4 style="width: 80%; margin: 30px auto; font-size: 1.25em">ArcGIS Experience Builder</h3>
+
+  <section class="project">
+    <a target='_blank' href="https://experience.arcgis.com/experience/59afc0ba755941619b24d1c94af92f5e/"><img src="images\experience.png" alt="This is a self-updating map that uses the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, updated every 10 minutes. This map is meant to demonstrate how web map developers can enroll live data in their custom map applications." class="project-image" /></a>
+    <h3>Iowa Live Travel Alerts</h3>
+    <p>The same data, but furnished with ArcGIS Experience Builder. Using continually updated data from the Iowa Department of Transportation's 511 ArcGIS REST service feature layer, this map demonstrates how to leverage ArcGIS REST service feature layers in web map applications developed in the no-code ArcGIS Experience Builder tool.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://experience.arcgis.com/experience/59afc0ba755941619b24d1c94af92f5e/">Iowa Travel Advisories</a></li>
+      <li>Data: <a target='_blank' href="https://services.arcgis.com/8lRhdTsQyJpO52F1/arcgis/rest/services/CARS511_Iowa_View/FeatureServer/0">Access the data</a></li>
+    </ul>
+  </section>
 
   <h3 style="width: 80%; margin: 30px auto; font-size: 1.5em">Collaborations with Students & Friends</h3>
 
@@ -217,7 +246,7 @@
       <li>See the map: <a target='_blank' href="https://dsps.lib.uiowa.edu/hicrn/map/">Tour Mid-Twentieth Century Iowa</a></li>
       <li>Data: <a target='_blank' href="https://github.com/ui-libraries/green_books_iowa_map/tree/main/data">Access the data</a></li>
     </ul>
-  </section> 
+  </section>
 
 </body>
 
