add gentrification map

--- a/index.html
+++ b/index.html
@@ -100,7 +100,16 @@
   <h3 style="width: 80%; margin: 30px auto; font-size: 1.5em">Independent Work</h3>
 
   <section class="project">
-    <a target='_blank' href="https://jebowe3.github.io/SIPRI-transfers/"><img src="images\sipri.png" alt="A web map application that leverages DSM raster elevation data stored in PMTiles to give 3-dimensional relief to an 1899 topographic map of the Adirondack High Peaks near Lake Placid, NY." class="project-image" /></a>
+    <a target='_blank' href="https://jebowe3.github.io/atl-neighborhood-change/"><img src="images\atl-gentrification.png" alt="A web map application showing the locations of census tracts in Metro Atlanta predicted to undergo neighborhood change." class="project-image" /></a>
+    <h3>Risk of Neighborhood Change in Atlanta</h3>
+    <p>An interactive map showing the locations of census tracts in Metro Atlanta predicted to undergo neighborhood change. This assigns scores to factors identified by Rigolon and Németh's 2019 study, "<a href="https://www.tandfonline.com/doi/abs/10.1080/07352166.2018.1562846" target="_blank">Toward a socioecological model of gentrification: How people, place, and policy shape neighborhood change</a>" as closely correlated with emergent gentrification in US cities.</p>
+    <ul>
+      <li>See the map: <a target='_blank' href="https://jebowe3.github.io/atl-neighborhood-change/">Risk of Neighborhood Change in Atlanta</a></li>
+    </ul>
+  </section>
+
+  <section class="project">
+    <a target='_blank' href="https://jebowe3.github.io/SIPRI-transfers/"><img src="images\sipri.png" alt="A map made from data downloaded from the Stockholm International Peace Research Institute's (SIPRI) Arms Transfers Database of Trend Indicator Values (TIV)." class="project-image" /></a>
     <h3>US Global Weapons Transfers</h3>
     <p>A map made from data downloaded from the Stockholm International Peace Research Institute's (SIPRI) Arms Transfers Database of Trend Indicator Values (TIV). These values are based on the known unit production costs of a core set of weapons and are intended
       to allow for a common measurement of arms flow trends between nations over time. This map plots trends in arms transfers from the US to other nations between 1950 and 2023.</p>
