--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <section class="project">
     <a target='_blank' href="https://jebowe3.github.io/atl-neighborhood-change/"><img src="images\atl-gentrification.png" alt="A web map application showing the locations of census tracts in Metro Atlanta predicted to undergo neighborhood change." class="project-image" /></a>
     <h3>Risk of Neighborhood Change in Atlanta</h3>
-    <p>An interactive map showing the locations of census tracts in Metro Atlanta predicted to undergo neighborhood change. This assigns scores to factors identified by Rigolon and Németh's 2019 study, "<a href="https://www.tandfonline.com/doi/abs/10.1080/07352166.2018.1562846" target="_blank">Toward a socioecological model of gentrification: How people, place, and policy shape neighborhood change</a>" as closely correlated with emergent gentrification in US cities.</p>
+    <p>An interactive map showing the locations of census tracts in Metro Atlanta predicted to undergo neighborhood change. This assigns scores to factors identified by Rigolon and Németh's 2019 study, "<a href="https://www.tandfonline.com/doi/abs/10.1080/07352166.2018.1562846" target="_blank">Toward a socioecological model of gentrification: How people, place, and policy shape neighborhood change</a>," as closely correlated with emergent gentrification in US cities.</p>
     <ul>
       <li>See the map: <a target='_blank' href="https://jebowe3.github.io/atl-neighborhood-change/">Risk of Neighborhood Change in Atlanta</a></li>
     </ul>
